# gencolormap

./: CMakeLists.txt  LICENSE  README.md  cmdline.cpp  colormap.cpp  colormap.hpp  colormapwidgets.cpp  colormapwidgets.hpp  export.cpp  export.hpp  gencolormap-gui.qmake  gui.cpp  gui.hpp  gui.qrc  testwidget.cpp  testwidget.hpp
aux/: de.marlam.gencolormap.desktop  de.marlam.gencolormap.metainfo.xml
res/: de.marlam.gencolormap.metainfo.xml
